sfdx-spa-alcala/force-app/main/default/objects/Teacher_Subject__c/Teacher_Subject__c.object-meta.xml
<CustomObject>
    <label>Teacher Subject</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Teacher Subject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teacher Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>