sfdx-spa-alcala/force-app/main/default/objects/Teacher_Subject__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Teacher Subjects</relationshipLabel>
    <relationshipName>Teacher_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>