sfdx-spa-alcala/force-app/main/default/objects/Teacher_Subject__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <referenceTo>Period_Semester__c</referenceTo>
    <relationshipLabel>Teacher Subjects</relationshipLabel>
    <relationshipName>Teacher_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>