sfdx-spa-alcala/force-app/main/default/objects/Teacher_Subject__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subjects__c</referenceTo>
    <relationshipLabel>Teacher Subjects</relationshipLabel>
    <relationshipName>Teacher_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>