sfdx-spa-alcala/force-app/main/default/objects/Teacher_Subject__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teacher Subjects</relationshipLabel>
    <relationshipName>Teacher_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>