sfdx-spa-alcala/force-app/main/default/objects/Teacher_Subject__c/recordTypes/Junior_High.recordType-meta.xml
<RecordType>
    <fullName>Junior_High</fullName>
    <active>true</active>
    <label>Junior High</label>
</RecordType>