sfdx-spa-alcala/force-app/main/default/objects/Teacher_Subject__c/listViews/Junior_High.listView-meta.xml
<ListView>
    <fullName>Junior_High</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Teacher__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Teacher_Subject__c.Junior_High</value>
    </filters>
    <label>Junior High</label>
</ListView>